README, LICENSE adicionados e links corrigidos em index e style.

--- a/index.html
+++ b/index.html
@@ -69,7 +69,8 @@
     <div id="testes"></div>
     <div class="Rodape">
       <p class="linha">
-        <span>Calculadora por <span class="destaque">Thiago Santana</span> como parte de <a href="https://www.theodinproject.com/" class="link">The Odin Project</a> © 2025. Todos os direitos reservados.</span>
+        <span>Calculadora por <span class="destaque">Thiago Santana</span> como parte de <a href="https://www.theodinproject.com/" class="link">The Odin Project</a> © 2025. Todos os direitos reservados. Veja mais no <a href="https://github.com/thiagoSantz/Calculadora" class="link-dois"> Github. </a></span>
+        <span></span>
       </p>
     </div>
   </body>
